www/public/app/css/components/header.css
/**
* Site header
* @since 12 jul 2017, 11:30
*/
.site-header {
    position: relative;
    height: var(--layout-header-height);
    box-sizing: border-box;
    border-bottom: 1px solid var(--line-light);
    z-index: 2;

    &__content {
        display: flex;
    }

    a {
        display: inline-block;
        text-decoration: none;
        letter-spacing: 0.2px;
        line-height: var(--layout-header-height);
    }

    &__menu-item:not(:first-of-type) {
        margin-left: 30px;

        @media (--mobile) {
            margin-left: 10px;
        }
    }

    &__right {
        margin-left: auto;
    }

    &__social {
        position: absolute;
        left: 50%;
        transform: translate(-50%, -2px);
        font-size: 1.4em;
    }

    &__github-icon {
        vertical-align: text-bottom;
        line-height: 0.7em;
        font-size: 1.66em;
    }

    &__photo {
        display: inline-block;
        border-radius: 50%;
        width: 22px;
        height: 22px;
        vertical-align: middle;
        margin-right: 5px;

        @apply --image-placeholder;
        font-size: 1.5em;
        font-weight: bold;
    }

    &__action {
        margin-right: 30px;

        &--write {
            color: var(--text-green);
        }

        &--edit {
            color: var(--text-pink);
        }
    }
}

